add sarahs comments

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -38,7 +38,7 @@ E-mail: \normalfont
 \end{aug}
 
 \begin{abstract}
-The Tour de France is the most prestigious cycling race in the world. This year, Tadej Pogačar won the 2020 Tour after surprisingly beating favorite Primož Roglič---who had led the Tour for 11 stages---in stage 20, the last possible one. But was Pogačar's victory something we should have seen coming? In this report, we propose a zero-inflated model based on the Tweedie distribution to study how unlikely, or not, was Pogačar's victory. Specifically, we model the time difference of each rider to the race leader and train the model on data from the first 19 stages of the Tour. We then predict the results of stage 20---in which Pogačar won the Tour---finding that although the model predicted Roglič to be the Tour's winner, Pogačar had a 23\% estimated probability of winning as well.
+The Tour de France is the most prestigious cycling race in the world. Tadej Pogačar won the 2020 Tour on the last possible stage after surprisingly beating favorite Primož Roglič---who had led the Tour for 11 stages. But was Pogačar's victory something we should have foreseen? In this report, we propose a zero-inflated model based on the Tweedie distribution to study how unlikely, or not, Pogačar's victory was. Specifically, we model the time difference of each rider to the race leader and train the model on data from the first 19 stages of the Tour. We then predict the results of stage 20---in which Pogačar won the Tour---finding that although the model predicted Roglič to be the Tour's winner, Pogačar had a 23\% estimated probability of winning as well.
 \end{abstract}
 
 
@@ -48,15 +48,16 @@ The Tour de France is the most prestigious cycling race in the world. This year,
 \section{Introduction} \label{sec:intro}
 
 
-The Tour de France is cycling's best known and most prestigious race. In its current format, multiple teams of riders compete in 21 races (called stages) across 23 days. Many competitions take place at the Tour each year. In the points classification, points are given to stage winners and during intermediate sprints; in the mountains classification, riders who get first to mountain summits get points. The most important competition, however, is the general classification. Succinctly, the general classification is won by the rider who completes the Tour in the least amount of time. The rider who wins the general classification is generally considered to have won the Tour, and in this report we refer to the race leader as the rider who is currently leading the general classification. \\
+The Tour de France is cycling's best known and most prestigious race. In its current format, multiple teams of riders compete in 21 races (called stages) spred across 23 days. Many competitions take place at the Tour each year. In the points classification, points are given to stage winners and during intermediate sprints; in the mountains classification, riders who arrive first to mountain summits get points. The most important competition, however, is the general classification. Succinctly, the general classification is won by the rider who completes the Tour in the least amount of time. The rider who wins the general classification is said to have won the Tour, and in this report we refer to the race leader as the rider who is currently leading the general classification. \\
 
 
-The 2020 Tour de France saw 175 riders organized in 22 teams compete for the general classification. The favorite to win the Tour was Slovenian Primož Roglič, currently considered by many to be the best cyclist in the world.\footnote{See \url{https://www.uci.org/road/rankings.}} Roglič led the Tour for 11 straight stages, but lost the lead to compatriot and youngster Tadej Pogačar in stage 20. Tradition dictates the last stage (i.e. stage 21) to be ceremonial: cyclists ride to Paris while celebrating that the Tour is over, and no positions are contested. Pogačar thus maintained his lead and won the Tour. But Pogačar not only beat Roglič in the last possible stage---he did it against anyones' guess, and by a significant time margin of 59 seconds (after being down 57 seconds in stage 19). \\
+The 2020 Tour de France saw 175 riders organized in 22 teams compete for the general classification. The favorite to win the Tour was Slovenian Primož Roglič, who is currently considered to be the best cyclist in the world.\footnote{See \url{https://www.uci.org/road/rankings.}} Roglič led the Tour for 11 stages but lost the lead to compatriot and youngster Tadej Pogačar in stage 20. Tradition dictates the last stage (i.e. stage 21) to be ceremonial: cyclists ride to Paris while celebrating that the Tour is over, and no positions are contested. Pogačar thus maintained his lead and won the Tour. But Pogačar not only beat Roglič in the last possible stage---he did it against all odds and by a significant time margin of 59 seconds (after being down 57 seconds in stage 19). \\
 
 
-In this report, we explore whether Pogačar's victory was truly as unpredictable as people took it to be, or if there is evidence to suggest his chances of winning were underestimated. For this purpose, we develop a zero-inflated model based on the Tweedie distribution to study the time difference of each rider to the race leader. The Tweedie distribution has been studied extensively in the actuarial science and rainfall literatures, where zero-inflated phenomena occur frequently \citep[see][and references therein]{jorgensen1994, withers2011}. It has also been used to model dollar-denominated outcomes \citep{lauderdale2012} and even to predict cyanobacterial biovolume from a Bayesian perspective \citep{haakonsson2020}. We apply this model to data scraped from the Tour's official website (\url{letour.fr}). \\
+In this report, we explore whether Pogačar's victory was truly as unpredictable as people took it to be, or if there is evidence to suggest his chances of winning were underestimated. For this purpose, we develop a zero-inflated model based on the Tweedie distribution to study the time difference of each rider to the race leader. The Tweedie distribution has been studied extensively in the actuarial science and rainfall literatures, where zero-inflated phenomena occur frequently \citep[see][and references therein]{jorgensen1994, withers2011}. It has also been used to model dollar-denominated outcomes \citep{lauderdale2012} and even to predict cyanobacterial biovolume from a Bayesian perspective \citep{haakonsson2020}. We train this model on data scraped from the Tour's official website (\url{letour.fr}). \\
 
 
+6: Normalized residuals of the compound Poisson-Gamma models, withcolor by response function. The vast majority of values are well within the±3 bound. The models tend to overestimate when fitted values are smalland underestimate when they are large.overcome this would be to restrict the values of the parameter associatedwith stage number to be non-negative, which would allow that covariateto linearly influence the response. Given the observed positive associationbetween stage number and time difference, this might be reasonable. Therest of the parameters can be scaled using another response function—whichwould result in a non-linear model—or alternatively they can be similarlyrestricted. Whether optimization methods are guaranteed to converge in thissetting is also left for future work. Another alternative would be to use aBayesian approach and directly incorporate the parameter restrictions intotheir prior distributions. Unfortunately, popular probabilistic programminglanguages such asStando not have a built-in Tweedie regression family,which would require the user to develop code to approximate the density.Another limitation is that the model assumes independence between differ-ent stages of the same rider. This can be partly justified by the fact that riderscan almost arbitrarily lose or win time difference at any given stage. However,
 
 Section \ref{sec:data} describes the data collection and summarises the data set. In Section \ref{sec:eda} we do an exploratory data analysis to inform modeling. We describe the model and some modifications in Section \ref{sec:stats}, and then show the results of fitting the model in Section \ref{sec:results}. Section \ref{sec:conclusion} contains concluding remarks and directions for future work.
 
@@ -107,13 +108,13 @@ timediff          & rider's time difference in seconds to race leader           
 \section{Exploratory data analysis} \label{sec:eda}
 
 
-There are many ways to predict the winner of the Tour with the information of the first 19 stages. In this section we investigate two potential variables, cumulative time and time difference to leader. The former is not amenable to statistical model due to the combinatorial restrictions that need to be accounted for. We thus explore the latter in more detail and in preparation for modeling in Section \ref{sec:stats}. \\
+There are many ways to predict the winner of the Tour with the information of the first 19 stages. In this section we investigate two potential variables, cumulative time and time difference to leader. The former is not amenable to statistical model due to the combinatorial restrictions that need to be accounted for. We thus explore the latter in more detail and in preparation for modeling in Section \ref{sec:stats}. It should be noted that stage number plays an important role because, as the race progresses, the riders become more tired. \\
 
-It should be noted that stage number plays an important role because, as the race progresses, the riders become more tired. There were two rest days: one between stages 9 and 10 and the other between stages 15 and 16. Tour de France riders can recover at faster rates than average people, so that their performance after a rest day could be similar to their performance during the Tour's first stage. In any case, performance can vary significantly by stage and it is thus of interest to account for it when modeling. \\
+%It should be noted that stage number plays an important role because, as the race progresses, the riders become more tired. There were two rest days: one between stages 9 and 10 and the other between stages 15 and 16. Tour de France riders can recover at faster rates than average people, so that their performance after a rest day could be similar to their performance during the Tour's first stage. In any case, performance can vary significantly by stage and it is thus of interest to account for it when modeling. \\
 
 
 
-To address the statistical question, we could directly work with the rank at each stage. However, working with this variable leads to many statistical complications and complex combinatorial restrictions. We instead explore variables that are not exactly the rank, but that can be used to determine it and are more amenable to statistical modelling. Figure \ref{fig:cumtime} shows the cumulative time of riders by stage. Cumlative time seems to increase linearly by stage, which suggests that a linear regression model might be appropriate. There are, however, some issues with this variable. First, the variance of the observations increases with stage. This is due to the fact that cumulative time is determined by adding individual stage times. The more times are added, the more variability there will be. Second, the observations are not independent: clearly a rider's cumulative time has to increase from one stage to the next. This also imposes a non-trivial combinatorial constraint that makes working with cumulative time too complicated. \\
+To address the statistical question, we could directly work with the rank at each stage. However, working with this variable leads to many statistical complications and complex combinatorial restrictions. We instead explore variables that are not exactly the rank, but that can be used to determine it and are more amenable to statistical modelling. Figure \ref{fig:cumtime} shows the cumulative time of riders by stage. Cumulative time seems to increase linearly by stage, which suggests that a linear regression model might be appropriate. There are, however, some issues with this variable. First, the variance of the observations increases with stage. This is due to the fact that cumulative time is determined by adding individual stage times. The more times are added, the more variability there will be. Second, the observations are not independent: clearly a rider's cumulative time has to increase from one stage to the next. This also imposes a non-trivial combinatorial constraint that makes cumulative time not amenable to statistical modeling. \\
 
 
 \begin{figure}[h]
@@ -164,7 +165,7 @@ Figures \ref{fig:timediff_contender} and \ref{fig:timediff_team} suggest that ti
 
 
 
-\FloatBarrier
+%\FloatBarrier
 
 
 \section{Statistical methodologies} \label{sec:stats}
@@ -209,7 +210,7 @@ What makes the compound Poisson-Gamma attractive from a regression perspective i
 \[
   p(y; \theta, \sigma^2) = \kappa(\sigma^2, y) \exp \left\{ \frac{\theta y - A(\theta)}{\sigma^2} \right\}.
 \]
-The mean of an exponential dispersion model is $\mu = A'(\theta)$, and we denote $Y \sim \distNamed{ED}(\mu, \sigma^2)$. Furthermore, if $Y \sim \distNamed{ED}(\mu, \sigma^2)$ then $\var (Y) = \sigma^2 V(\mu)$, where $V(\mu) = A''((A')^{-1}(\mu))$ is the variance function of $Y$. A special case of exponential dispersion models is the \textit{Tweedie family of distributions}. A random variable is said to follow a Tweedie distribution with power parameter $p$ if $Y \sim \distNamed{ED}(\mu, \sigma^2)$ and $V(\mu) = \mu^p$ for some $p \in \reals$, in which case we denote $Y \sim \distNamed{Tweedie}(\mu, \sigma^2, p)$. Compound Gamma-Poisson models are actually Tweedie distributions. \\
+The mean of an exponential dispersion model is $\mu = A'(\theta)$, and we denote $Y \sim \distNamed{ED}(\mu, \sigma^2)$. Furthermore, if $Y \sim \distNamed{ED}(\mu, \sigma^2)$ then $\var (Y) = \sigma^2 V(\mu)$, where $V(\mu) = A''((A')^{-1}(\mu))$ is the variance function of $Y$. A special case of exponential dispersion models is the \textit{Tweedie family of distributions}. A random variable is said to follow a Tweedie distribution with power parameter $p$ if $Y \sim \distNamed{ED}(\mu, \sigma^2)$ and $V(\mu) = \mu^p$ for some $p \in \reals$, in which case we denote $Y \sim \distNamed{Tweedie}(\mu, \sigma^2, p)$. Compound Gamma-Poisson models are Tweedie distributions. \\
 
 \bnprop
   If $Y \sim \distNamed{CPG}(\lambda, b)$ then $Y \sim \distNamed{Tweedie}(\mu, \sigma^2, p = 1.5)$ with
@@ -247,7 +248,7 @@ where $\ind_A(x) = 1$ if $x \in A$ and 0 otherwise and $y_{(N)}^k = \min \{y_1^k
 \[
   \log p(y_1^1, ..., y_N^K; \, \mu, \sigma^2) = \sum_{k=1}^K \sum_{n=1}^N \log p(y_n^k; \, \mu_n^k, \sigma^2) + \sum_{k=1}^K \log \ind_{\{ 0\}} (y_{(N)}^k). \label{eq:loglike}
 \]
-The first term in Eqn. \refeq{eq:loglike} is the log-likelihood of \iid Tweedie observations. The second term can be thought of as a penalty: it takes the value of 0 when each stage has an observation that is zero, and the value of $-\infty$ otherwise. In the case a stage does not have an observation that is zero, the MLE is not defined. \\
+The first term in Eqn. \refeq{eq:loglike} is the log-likelihood of \iid Tweedie observations. The second term can be thought of as a penalty: it takes the value of 0 when each stage has an observation that is zero, and the value of $-\infty$ otherwise. In the case a stage does not have an observation that is zero, the MLE is not defined. Else, the MLE is that of the Tweedie distribution. \\
 
 
 Note that our data satisfy the combinatorial constraint by construction. Indeed, that is the reason we considered it in the first place. Hence, the log-likelihood of the model parameters---which will be introduced briefly---given our data is not going to have the additional penaly term, which is going to equal zero. This means that we can do regular MLE without worrying about the combinatorial constraint. \\
@@ -374,21 +375,23 @@ Figure \ref{fig:norm_res} shows the normalized residuals for both models. The va
 \end{figure}
 
 
-Both models generally agree on their results. Even though neither managed to predict Pogačar's victory, they both assigned non-trivial probabilities to his victory.
+Both models generally agree on their results. Even though neither managed to predict Pogačar's victory, they both assigned non-trivial probabilities to his victory. Specifically, the model with the log response function assigns Pogačar a 23\% probability of winning the Tour.
+
+
 
 
 \section{Conclusion} \label{sec:conclusion}
 
 
-We proposed a zero-inflated generalized linear model based on compound Gamma-Poisson and Tweedie distributions to model the time difference of each rider of the 2020 Tour de France to the Tour's leader at each stage. We suggested two possible response functions---logarithm and canonical---to associate the linear predictor---which included the stage number, distance, rider's team, and favorite riders---with the mean of the time difference, which led to two models. After fitting these two models, we found that both predicted favorite Primož Roglič to be the winner of the Tour. However, they both also assigned relatively large probabilities of winning to Tadej Pogačar, the actual winner of the Tour. In that sense, Pogačar's victory should not have been as much a surprise as it was. \\
+We proposed a zero-inflated generalized linear model based on the Tweedie distribution to model the time difference of each rider of the 2020 Tour de France to the Tour's leader at each stage. We suggested two possible response functions---logarithm and canonical---to associate the linear predictor---which included the stage number, distance, rider's team, and favorite riders---with the mean of the time difference, which led to two models. After fitting these two models, we found that both predicted favorite Primož Roglič to be the winner of the Tour. However, they both also assigned relatively large probabilities of winning to Tadej Pogačar, the actual winner of the Tour. In that sense, Pogačar's victory should not have been as much a surprise as it was. \\
 
 
-One limitation of the model is that it cannot capture the linear relationship between the time difference and the stage number because the identity link would result in values of the linear predictor that are not attainable for the response mean. The impact of this limitation was discussed in previous sections, and boils down to an underestimation of the variability in the response for early stages, and an overestimation for later ones. One possible way to overcome this would be to restrict the values of the parameter associated with stage number to be non-negative, which would allow that covariate to linearly influence the response. Given the observed positive association between stage number and time difference, this might be reasonable. The rest of the parameters can be scaled using another response function, which would result in a non-linear model, or similarly restricted. Whether optimization methods are guaranteed to converge in this setting is also left for future work. Another alternative would be to use a Bayesian approach and directly incorporate the parameter restrictions into their prior distributions. Unfortunately, popular probabilistic programming languages such as \textsf{Stan} do not have a built-in Tweedie regression family, which would require the user to develop code to approximate the density. \\
+One limitation of the model is that it cannot capture the linear relationship between the time difference and the stage number because the identity link would result in values of the linear predictor that are not valid for the response mean. The impact of this limitation was discussed in previous sections, and boils down to an underestimation of the variability in the response for early stages, and an overestimation for later ones. One possible way to overcome this would be to restrict the values of the parameter associated with stage number to be non-negative, which would allow that covariate to linearly influence the response. Given the observed positive association between stage number and time difference, this might be reasonable. The rest of the parameters can be scaled using another response function---which would result in a non-linear model---or alternatively they can be similarly restricted. Whether optimization methods are guaranteed to converge in this setting is also left for future work. Another alternative would be to use a Bayesian approach and directly incorporate the parameter restrictions into their prior distributions. Unfortunately, popular probabilistic programming languages such as \textsf{Stan} do not have a built-in Tweedie regression family, which would require the user to develop code to approximate the density. \\
 
 
 Another limitation is that the model assumes independence between different stages of the same rider. This can be partly justified by the fact that riders can almost arbitrarily lose or win time difference at any given stage. However, it would be interesting to properly account for this longitudinal structure. Whether the gains in accuracy, if any, offset the increase in complexity is also left for future work. \\
 
-Finally, a variable that was not included in the model and that might have had a significant impact is the type of stage. Some riders specialize in certain types of stages (such as mountain stages), and this can have a significant effect on their performance. However, the 20th stage in this year's Tour de France was the only time trial\footnote{Where riders race individually against the clock, usually in shorter routes that allow them to output more power throughout the stage.} of the whole Tour. Hence, there were no data on which to train the model for this stage type. Future work can explore including results from other Tours in the training data set, although how to account for missing and new riders is not clear. (Specifically, this year's Tour was Pogačar's first.) \\
+Finally, a variable that was not included in the model and that might have had a significant impact is the type of stage. Some riders specialize in certain types of stages (such as mountain stages), and this can have a significant effect on their performance. However, the 20th stage in this year's Tour de France was the only time trial\footnote{Where riders race individually against the clock, usually in shorter routes that allow them to output more power throughout the stage.} of the whole Tour. Hence, there were no data on which to train the model for this stage type. Future research can include results from other Tours in the training data set, although how to account for missing and new riders is not clear. (Specifically, this year's Tour was Pogačar's first.) \\
 
 
 
